@@ -12,7 +12,8 @@ import(GenomicRanges)
 import(IRanges)
 importFrom(Biobase, assayDataElementNames, assayDataElementReplace,
            assayDataElement, "assayDataElement<-", validMsg)
-importFrom(reshape, melt) 
+## The following should not be necessary, but Hadley does not use S3export in reshape
+importFrom(reshape, melt, melt.array, melt.data.frame, melt.list, melt.matrix, melt.table)
 importFrom(mclust, Mclust)
 importFrom(RColorBrewer, brewer.pal)
 importFrom(beanplot, beanplot)
